syntax = "proto3";
package proto;
option java_package = "generated";

// Msg Handler with lamport clocks support.
service nodeAPI{
    rpc findNode(NodeProto) returns (NodesClose);
    rpc ping(NodeProto) returns (NodeProto);
    rpc store(StoreRequest) returns (StoreResponse);
    rpc findValue(FindRequest) returns (FindResponse);
}

// Named NodeProto to not mistake with the class s_kademlia.node.Node.
message NodeProto{
    string ip = 1;
    int32 port = 2;
    bytes publicKey = 3; // Hashing this will return the nodeID while at the same time providing a message authentication method.
}

message NodesClose{
    repeated NodeProto nodes = 1;
}

message StoreRequest{
    bytes key = 1;
    bytes value = 2;
    int64 timestamp = 3;
}

message StoreResponse{
    bytes key = 1;
    int64 timestamp = 2;
    bool success = 3;
}

message FindRequest{
    bytes key = 1;
}

message FindResponse{
    bytes value = 1;
    int64 timestamp = 2;
    bool success = 3;
}
